--- a/04-juniper_junos_facts/00-pb.facts_automatically_registered.yaml
+++ b/04-juniper_junos_facts/00-pb.facts_automatically_registered.yaml
@@ -3,7 +3,7 @@
 # Facts are automatically registered under the junos key
 #
 - name: 'Automatically registered facts'
-  hosts: r0
+  hosts: DOCKERSWITH.CBADOPS.NET
   connection: local
   gather_facts: no
   roles:
