--- a/04-juniper_junos_facts/01-pb.config_fact.yaml
+++ b/04-juniper_junos_facts/01-pb.config_fact.yaml
@@ -3,7 +3,7 @@
 # Facts can also fetch the committed config.
 #
 - name: 'Automatically registered facts'
-  hosts: r0
+  hosts: DOCKERSWITCH.CBADOPS.NET
   connection: local
   gather_facts: no
   roles:
