--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,5 +5,5 @@ hash_behaviour = merge
 inventory = ./inventory
 log_path = ~/.ansible/log/ansible.log
 retry_files_save_path = ~/.ansible/retry
-roles_path = /home/user/Automation/Projects/Ansible/roles
+roles_path = /etc/Ansible/roles
 host_key_checking = False
